--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -22,6 +22,9 @@ models:
     model:
       - github.com/99designs/gqlgen/graphql.IntID
   # Map the Status type that was defined in the schema
+  Node:
+    model:
+      - artsign/ent.Noder
   Status:
     model:
       - artsign/ent/work.Status
