--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,19 @@ services:
       # - ./db/conf.d:/etc/mysql/conf.d
     ports:
       - 4306:3306
+  app:
+    container_name: artsign_app
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    entrypoint: "air"
+    env_file: ./docker.env
+    volumes:
+      - bin:/artsign/bin
+      - .:/artsign
+    ports:
+      - 8081:8081
+    depends_on:
+      - db
+volumes:
+  bin:
