--- a/docker.env
+++ b/docker.env
@@ -6,3 +6,17 @@ ARTSIGN_DB_USER=root
 ARTSIGN_DB_PASSWORD=root
 ARTSIGN_DB_LOC=Asia/Tokyo
 ARTSIGN_DB_COLLATION=utf8mb4_bin
+
+# AWS
+AWS_ACCESS_KEY_ID=artsignadmin
+AWS_SECRET_ACCESS_KEY=artsignadmin
+
+# S3
+S3_ENDPOINT_URL=http://storage:9000
+S3_USE_PATH_STYLE=true
+S3_BUCKET_NAME=local
+
+# MINIO
+MINIO_ROOT_USER=artsignadmin
+MINIO_ROOT_PASSWORD=artsignadmin
+MINIO_DOMAIN=localhost:9000
