air に arm サポートがマージされたから

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,8 +2,7 @@ FROM golang:1.17.2-buster
 
 ENV TZ Asia/Tokyo
 
-COPY install.sh ./
-RUN cat install.sh | sh -s -- -b $(go env GOPATH)/bin
+RUN curl -sSfL https://raw.githubusercontent.com/cosmtrek/air/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
 
 WORKDIR /artsign
 
