--- a/.github/workflows/build-and-push-dev.yaml
+++ b/.github/workflows/build-and-push-dev.yaml
@@ -3,7 +3,7 @@ name: Build and Push ArtSign api to dev cluser
 on:
   push:
     branches:
-      - yamagai/modify-github-actions
+      - main
 
 jobs:
   build-and-push-image:
