--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,9 @@ services:
       dockerfile: Dockerfile.dev
     entrypoint: "./wait-for-it.sh db:3306 -- air"
     env_file: ./docker.env
+    environment:
+      AWS_ACCESS_KEY_ID:
+      AWS_SECRET_ACCESS_KEY:
     volumes:
       - bin:/artsign/bin
       - .:/artsign
