--- a/docker.env
+++ b/docker.env
@@ -8,13 +8,11 @@ ARTSIGN_DB_LOC=Asia/Tokyo
 ARTSIGN_DB_COLLATION=utf8mb4_bin
 
 # AWS
-AWS_ACCESS_KEY_ID=artsignadmin
-AWS_SECRET_ACCESS_KEY=artsignadmin
 
 # S3
-S3_ENDPOINT_URL=http://storage:9000
-S3_USE_PATH_STYLE=true
-S3_BUCKET_NAME=local
+S3_ENDPOINT_URL=https://s3.ap-northeast-1.amazonaws.com
+S3_USE_PATH_STYLE=false
+S3_BUCKET_NAME=artsign-dev
 
 # MINIO
 MINIO_ROOT_USER=artsignadmin
