--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,12 +1,22 @@
 # schema tells gqlgen where the GraphQL schema is located.
 schema:
-  - work.graphql
-  - ent.graphql
+  - "graph/*.graphql"
+
+# Where should the generated server code go?
+exec:
+  filename: graph/generated/generated.go
+  package: generated
+
+# Where should any generated models go?
+model:
+  filename: graph/model/models_gen.go
+  package: model
 
 # resolver reports where the resolver implementations go.
 resolver:
   layout: follow-schema
-  dir: .
+  dir: graph
+  package: graph
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
