modify job name

--- a/.github/workflows/build-and-push-dev.yaml
+++ b/.github/workflows/build-and-push-dev.yaml
@@ -6,7 +6,7 @@ on:
       - yamagai/update-github-actions
 
 jobs:
-  build-and-push-to-gcr:
+  build-and-push-image:
     permissions:
       contents: read
       id-token: write
