--- a/.github/workflows/build-and-push-dev.yaml
+++ b/.github/workflows/build-and-push-dev.yaml
@@ -31,8 +31,6 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: bamboooo/artsign-api
-          flavor: |
-            latest=true
           tags: |
             type=sha
 
@@ -42,7 +40,7 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}, bamboooo/artsign-api:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
