Introduce go-jwt-middleware

--- a/docker.env
+++ b/docker.env
@@ -18,3 +18,7 @@ S3_BUCKET_NAME=artsign-dev
 MINIO_ROOT_USER=artsignadmin
 MINIO_ROOT_PASSWORD=artsignadmin
 MINIO_DOMAIN=localhost:9000
+
+# AUTH0
+AUTH0_DOMAIN='artsign-dev.jp.auth0.com'
+AUTH0_AUDIENCE='https://artsign-api-dev.xyz/query'
